test/ui/tests/fail/class-async-owned-context.stderr
error: Context parameters must be a `&mut` reference. Try `&mut FunctionContext` or `&mut Cx`.
 --> tests/fail/class-async-owned-context.rs:6:27
  |
6 |     fn method(&self, _cx: FunctionContext) {}
  |                           ^^^^^^^^^^^^^^^

error[E0412]: cannot find type `FunctionContext` in this scope
 --> tests/fail/class-async-owned-context.rs:6:27
  |
6 |     fn method(&self, _cx: FunctionContext) {}
  |                           ^^^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
1 + use neon::prelude::FunctionContext;
  |

error[E0277]: the trait bound `Example: Default` is not satisfied
 --> tests/fail/class-async-owned-context.rs:3:1
  |
3 | #[neon::class]
  | ^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Example`
  |
  = note: this error originates in the attribute macro `neon::class` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Example` with `#[derive(Default)]`
  |
1 + #[derive(Default)]
2 | struct Example;
  |
